# stake

./: .gitignore  Anchor.toml  LICENSE  README.md  package.json
.github/workflows/: node.js.yml
ci/: anchor-test.sh  install-build-deps.sh  install.sh  solana-version.sh
programs/staking/: Cargo.toml
programs/staking/src/: lib.rs
programs/staking/tests/: helper.rs  test_functional.rs
tests/: staking.js
