[package]
name = "staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "bph_staking"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
test-bpf = []
default = ["test-bpf"]

[dependencies]
anchor-lang = "0.16.0"
anchor-spl = "0.16.0"
solana-program = "1.6.6"

[dev-dependencies]
assert_matches = "1.5.0"
solana-sdk = "1.7.8"
solana-program-test = "1.7.8"