[package]
name = "staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "bph_staking"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
test-bpf = []
default = ["test-bpf"]

[dependencies]
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }
anchor-lang = "0.14.0"
anchor-spl = "0.14.0"
solana-program = "1.7.11"

[dev-dependencies]
assert_matches = "1.5.0"
solana-sdk = "1.7.8"
solana-program-test = "1.7.8"